[tool.poetry]
name = "awp"
version = "0.1.0"
description = ""
authors = ["alvgrv <aaron.lovegrove@essentia-analytics.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
typer = "^0.6.1"
textual = "^0.2.1"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "essentia"
url = "https://essentia-analytics-949604273402.d.codeartifact.eu-west-1.amazonaws.com/pypi/internal-pypi/simple/"
